--- a/index.html
+++ b/index.html
@@ -30,34 +30,37 @@
 
         <div class="row">
             <div class="col p-3">
-                <table class="table table-striped border" id="statsTable">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Team</th>
-                            <th scope="col">Game</th>
-                            <th scope="col">Comp</th>
-                            <th scope="col">MIN</th>
-                            <th scope="col">PTS</th>
-                            <th scope="col">FG%</th>
-                            <th scope="col">TS%</th>
-                            <th scope="col">PF</th>
-                            <th scope="col">+/-</th>
-                            <th scope="col">Eff</th>
-                            <th scope="col">GmSc</th>
-                        </tr>
-                    </thead>
-                    <tbody id="statsTableBody">
-                    </tbody>
-                </table>
+                <div class="table-responsive">
+                    <table class="table table-striped border" id="statsTable">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Team</th>
+                                <th scope="col">Game</th>
+                                <th scope="col">Comp</th>
+                                <th scope="col">MIN</th>
+                                <th scope="col">PTS</th>
+                                <th scope="col">FG%</th>
+                                <th scope="col">TS%</th>
+                                <th scope="col">PF</th>
+                                <th scope="col">+/-</th>
+                                <th scope="col">Eff</th>
+                                <th scope="col">GmSc</th>
+                            </tr>
+                        </thead>
+                        <tbody id="statsTableBody">
+                        </tbody>
+                    </table>
+                </div>
+
                 <div class="row">
                     <div class="col">
-                    <div class="progress d-none" id="progressContainer" role="progressbar" aria-label="Fetching Data"
-                        aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" id="progressBar"
-                            style="width: 75%"></div>
-                    </div>
+                        <div class="progress d-none" id="progressContainer" role="progressbar"
+                            aria-label="Fetching Data" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" id="progressBar"
+                                style="width: 75%"></div>
+                        </div>
                     </div>
                 </div>
             </div>
