--- a/index.html
+++ b/index.html
@@ -24,53 +24,71 @@
                 </select>
             </div>
         </div>
-        
+
         <div class="row">
-            <div class="col-lg-9 col-md-8 col-sm-6 col-12">
+            <div class="col-lg-3 col-md-6 col-sm-12 col-12">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                    <div class="col-12">
+                        <legend>Adult Men</legend>
+                    </div>
+                    <div class="col-12">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="Championship Men" id="checkChampMen"
                                 checked>
                             <label class="form-check-label" for="checkChampMen">Championship Men</label>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="Championship Women"
-                                id="checkChampWomen">
-                            <label class="form-check-label" for="checkChampWomen">Championship Women</label>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                    <div class="col-12">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="Division One Men"
                                 id="checkDivisionOneMen" checked>
                             <label class="form-check-label" for="checkDivisionOneMen">Division One Men</label>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="Division One Women"
-                                id="checkDivisionOneWomen">
-                            <label class="form-check-label" for="checkDivisionOneWomen">Division One Women</label>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                    <div class="col-12">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="Division Two Men"
                                 id="checkDivisionTwoMen" checked>
                             <label class="form-check-label" for="checkDivisionTwoMen">Division Two Men</label>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 col-sm-12 col-12">
+                <div class="row">
+                    <div class="col-12">
+                        <legend>Adult Women</legend>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Championship Women"
+                                id="checkChampWomen">
+                            <label class="form-check-label" for="checkChampWomen">Championship Women</label>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Division One Women"
+                                id="checkDivisionOneWomen">
+                            <label class="form-check-label" for="checkDivisionOneWomen">Division One Women</label>
+                        </div>
+                    </div>
+                    <div class="col-12">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="Division Two Women"
                                 id="checkDivisionTwoWomen">
                             <label class="form-check-label" for="checkDivisionTwoWomen">Division Two Women</label>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 col-12">
+                <div class="row">
+                    <div class="col-12">
+                        <legend>Youth Men</legend>
+                    </div>
+                    <div class="col-12">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="Victorian Youth Championship Men"
                                 id="checkVictorianYouthChampMen">
@@ -78,45 +96,21 @@
                                 Men</label>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="Victorian Youth Championship Women"
-                                id="checkVictorianYouthChampWomen">
-                            <label class="form-check-label" for="checkVictorianYouthChampWomen">Vic Youth Champ
-                                Women</label>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                    <div class="col-12">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="Youth League One Men"
                                 id="checkYouthLeagueOneMen">
                             <label class="form-check-label" for="checkYouthLeagueOneMen">Youth League One Men</label>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="Youth League One Women"
-                                id="checkYouthLeagueOneWomen">
-                            <label class="form-check-label" for="checkYouthLeagueOneWomen">Youth League One
-                                Women</label>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                    <div class="col-12">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="Youth League Two Men"
                                 id="checkYouthLeagueTwoMen">
                             <label class="form-check-label" for="checkYouthLeagueTwoMen">Youth League Two Men</label>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="Youth League Two Women"
-                                id="checkYouthLeagueTwoWomen">
-                            <label class="form-check-label" for="checkYouthLeagueTwoWomen">Youth League Two
-                                Women</label>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-12">
+                    <div class="col-12">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="Youth League Three Men"
                                 id="checkYouthLeagueThreeMen">
@@ -125,33 +119,61 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+            <div class="col-lg-3 col-md-6 col-sm-12 col-12">
                 <div class="row">
-                    <div class="col p-1">
-                        <label for="sortBy" class="form-label">Sort By</label>
-                        <select id="sortBy" class="form-select">
-                            <option value="bib">#</option>
-                            <option value="personName">Name</option>
-                            <option value="teamName">Team</option>
-                            <option value="gameTitleHomeVsAway">Game</option>
-                            <option value="competitionName">Comp</option>
-                            <option value="minutes">MIN</option>
-                            <option value="points">PTS</option>
-                            <option value="fieldGoalsPercentage">FG%</option>
-                            <option value="trueShootingPercentage">TS%</option>
-                            <option value="foulsPersonal">PF</option>
-                            <option value="plusMinus">+/-</option>
-                            <option value="efficiency">Eff</option>
-                            <option value="gameScore" selected>GmSc</option>
-                        </select>
+                    <div class="col-12">
+                        <legend>Youth Women</legend>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Victorian Youth Championship Women"
+                                id="checkVictorianYouthChampWomen">
+                            <label class="form-check-label" for="checkVictorianYouthChampWomen">Vic Youth Champ
+                                Women</label>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Youth League One Women"
+                                id="checkYouthLeagueOneWomen">
+                            <label class="form-check-label" for="checkYouthLeagueOneWomen">Youth League One
+                                Women</label>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="Youth League Two Women"
+                                id="checkYouthLeagueTwoWomen">
+                            <label class="form-check-label" for="checkYouthLeagueTwoWomen">Youth League Two
+                                Women</label>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
+        <div class="row">
+            <div class="col-auto">
+                <label for="sortBy" class="form-label">Sort By</label>
+            </div>
+            <div class="col-auto">
+                <select id="sortBy" class="form-select">
+                    <option value="bib">#</option>
+                    <option value="personName">Name</option>
+                    <option value="teamName">Team</option>
+                    <option value="gameTitleHomeVsAway">Game</option>
+                    <option value="competitionName">Comp</option>
+                    <option value="minutes">MIN</option>
+                    <option value="points">PTS</option>
+                    <option value="fieldGoalsPercentage">FG%</option>
+                    <option value="trueShootingPercentage">TS%</option>
+                    <option value="foulsPersonal">PF</option>
+                    <option value="plusMinus">+/-</option>
+                    <option value="efficiency">Eff</option>
+                    <option value="gameScore" selected>GmSc</option>
+                </select>
+            </div>
+        </div>
         <div class="row">
             <div class="col p-3">
                 <div class="table-responsive">
